--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: AuRoom 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-18 16:52+0500\n"
+"POT-Creation-Date: 2025-12-19 01:54+0500\n"
 "PO-Revision-Date: 2025-12-17 22:40+0500\n"
 "Last-Translator: Claude AI <noreply@anthropic.com>\n"
 "Language-Team: English <en@auroom.com>\n"
@@ -58,10 +58,14 @@ msgid "Добавить товар"
 msgstr "Add Product"
 
 #: catalog/templates/catalog/base.html:402
+#: catalog/templates/catalog/factory_category_add.html:5
+#: catalog/templates/catalog/factory_category_add.html:12
 msgid "Добавить категорию"
 msgstr "Add Category"
 
 #: catalog/templates/catalog/base.html:407
+#: catalog/templates/catalog/factory_characteristic_add.html:5
+#: catalog/templates/catalog/factory_characteristic_add.html:12
 msgid "Добавить характеристику"
 msgstr "Add Characteristic"
 
@@ -145,6 +149,61 @@ msgstr "Sign In"
 #: catalog/templates/catalog/login.html:41
 msgid "На главную"
 msgstr "Home"
+
+#: catalog/templates/catalog/factory_category_add.html:14
+#, fuzzy
+#| msgid "Создайте аккаунт для публикации ваших товаров"
+msgid "Создайте собственную категорию для ваших товаров"
+msgstr "Create an account to publish your products"
+
+#: catalog/templates/catalog/factory_category_add.html:27
+#: catalog/templates/catalog/factory_characteristic_add.html:27
+#, fuzzy
+#| msgid "Пожалуйста, исправьте ошибки в форме."
+msgid "Пожалуйста, исправьте ошибки:"
+msgstr "Please correct the errors in the form."
+
+#: catalog/templates/catalog/factory_category_add.html:48
+msgid ""
+"Если выберете родительскую категорию, создастся подкатегория. Оставьте "
+"пустым для главной категории."
+msgstr ""
+"If you select a parent category, a subcategory will be created. Leave blank "
+"for a main category."
+
+#: catalog/templates/catalog/factory_category_add.html:63
+msgid "Изображение для категории (необязательно)"
+msgstr "Category image (optional)"
+
+#: catalog/templates/catalog/factory_category_add.html:69
+msgid "Создать категорию"
+msgstr "Create Category"
+
+#: catalog/templates/catalog/factory_category_add.html:73
+#: catalog/templates/catalog/factory_characteristic_add.html:86
+#: catalog/templates/catalog/favorites_list.html:210
+#: catalog/templates/catalog/home.html:480
+#: catalog/templates/catalog/product_add.html:347
+#: catalog/templates/catalog/product_delete.html:37
+#: catalog/templates/catalog/product_detail.html:280
+msgid "Отмена"
+msgstr "Cancel"
+
+#: catalog/templates/catalog/factory_characteristic_add.html:14
+msgid "Создайте характеристику для использования в ваших товарах"
+msgstr "Create a characteristic for use in your products"
+
+#: catalog/templates/catalog/factory_characteristic_add.html:38
+msgid "Выберите тип характеристики, которую хотите добавить"
+msgstr "Select the type of characteristic you want to add"
+
+#: catalog/templates/catalog/factory_characteristic_add.html:46
+msgid "Например: \\"
+msgstr "For example: \\"
+
+#: catalog/templates/catalog/factory_characteristic_add.html:82
+msgid "Создать характеристику"
+msgstr "Create Characteristic"
 
 #: catalog/templates/catalog/factory_dashboard.html:14
 msgid "Личный кабинет завода"
@@ -407,14 +466,6 @@ msgstr "Description (optional)"
 #: catalog/templates/catalog/favorites_list.html:201
 msgid "Краткое описание списка..."
 msgstr "Brief list description..."
-
-#: catalog/templates/catalog/favorites_list.html:210
-#: catalog/templates/catalog/home.html:480
-#: catalog/templates/catalog/product_add.html:347
-#: catalog/templates/catalog/product_delete.html:37
-#: catalog/templates/catalog/product_detail.html:280
-msgid "Отмена"
-msgstr "Cancel"
 
 #: catalog/templates/catalog/favorites_list.html:231
 msgid "Переименовать список"
@@ -762,8 +813,22 @@ msgstr "Select Area"
 msgid "Отменить"
 msgstr "Apply"
 
+#: catalog/templates/catalog/product_add.html:237
+#, fuzzy
+#| msgid "Отменить"
+msgid "Отменить (Ctrl+Z)"
+msgstr "Apply"
+
+#: catalog/templates/catalog/product_add.html:240
+msgid "Вернуть (Ctrl+Shift+Z)"
+msgstr ""
+
 #: catalog/templates/catalog/product_add.html:241
 msgid "Вернуть"
+msgstr ""
+
+#: catalog/templates/catalog/product_add.html:247
+msgid "Посмотреть финальный результат"
 msgstr ""
 
 #: catalog/templates/catalog/product_add.html:248
@@ -782,9 +847,21 @@ msgstr "Product Dimensions"
 msgid "Ширина (мм)"
 msgstr "Width (mm)"
 
+#: catalog/templates/catalog/product_add.html:281
+#, fuzzy
+#| msgid "Введите пароль"
+msgid "Введите ширину"
+msgstr "Enter your password"
+
 #: catalog/templates/catalog/product_add.html:284
 msgid "Высота (мм)"
 msgstr "Height (mm)"
+
+#: catalog/templates/catalog/product_add.html:285
+#, fuzzy
+#| msgid "Введите пароль"
+msgid "Введите высоту"
+msgstr "Enter your password"
 
 #: catalog/templates/catalog/product_add.html:289
 msgid "Укажите размеры изделия вручную в миллиметрах"
@@ -908,15 +985,55 @@ msgstr "Current Photo"
 msgid "Сохранить изменения"
 msgstr "Save Changes"
 
+#: catalog/templates/catalog/product_fullscreen.html:5
+msgid "Полноэкранный просмотр"
+msgstr "Fullscreen View"
+
+#: catalog/templates/catalog/product_fullscreen.html:198
+msgid "Изображение отсутствует"
+msgstr "Image not available"
+
+#: catalog/templates/catalog/product_fullscreen.html:220
+msgid "Назад к товару"
+msgstr "Back to Product"
+
+#: catalog/templates/catalog/product_fullscreen.html:225
+#: catalog/templates/catalog/product_fullscreen.html:326
+msgid "Увеличить"
+msgstr "Zoom In"
+
+#: catalog/templates/catalog/product_fullscreen.html:230
+#: catalog/templates/catalog/product_fullscreen.html:395
+msgid "Скрыть линейку"
+msgstr "Hide Ruler"
+
+#: catalog/templates/catalog/product_fullscreen.html:236
+msgid "Предыдущее"
+msgstr "Previous"
+
+#: catalog/templates/catalog/product_fullscreen.html:240
+msgid "Следующее"
+msgstr "Next"
+
+#: catalog/templates/catalog/product_fullscreen.html:247
+msgid "Скачать"
+msgstr "Download"
+
+#: catalog/templates/catalog/product_fullscreen.html:332
+msgid "Уменьшить"
+msgstr "Zoom Out"
+
+#: catalog/templates/catalog/product_fullscreen.html:400
+msgid "Линейка"
+msgstr "Ruler"
+
 #: catalog/views.py:305 catalog/views.py:517
-#| msgid "Регистрация завода - Ювелирный Каталог"
 msgid "Регистрация прошла успешно! Добро пожаловать!"
 msgstr "Registration successful! Welcome!"
 
 #: catalog/views.py:319 catalog/views.py:360 catalog/views.py:381
 #: catalog/views.py:451 catalog/views.py:494 catalog/views.py:771
 #: catalog/views.py:798
-#| msgid "Редактировать профиль завода"
 msgid "У вас нет профиля завода"
 msgstr "You do not have a factory profile"
 
@@ -925,7 +1042,6 @@ msgid "Профиль успешно обновлён!"
 msgstr "Profile successfully updated!"
 
 #: catalog/views.py:406
-#| msgid "Ошибка сохранения списка"
 msgid "Ошибка при сохранении изображения"
 msgstr "Error saving image"
 
@@ -960,12 +1076,10 @@ msgid "Добавлено в список \"{favorite_list.name}\""
 msgstr "Add to List"
 
 #: catalog/views.py:649
-#| msgid "Добавить в избранное"
 msgid "Мои избранные"
 msgstr "My Favorites"
 
 #: catalog/views.py:649
-#| msgid "Список создан!"
 msgid "Список по умолчанию"
 msgstr "Default list"
 
@@ -985,7 +1099,6 @@ msgid "Характеристика \"{name}\" успешно добавлена
 msgstr "Metal Characteristics"
 
 #: catalog/views.py:849
-#| msgid "Ошибка удаления списка"
 msgid "Ошибка при добавлении: {str(e)}"
 msgstr "Error adding: {str(e)}"
 
